<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>es.usc.citius.lab</groupId>
    <artifactId>hipster</artifactId>
    <name>hipster</name>
    <version>0.0.1-SNAPSHOT</version>
    <url>https://bitbucket.org/hipster/hipster/</url>
    <properties>
        <gpg.skip>true</gpg.skip>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <test.jvm.argLine>
            -server
            -XX:+AggressiveOpts
        </test.jvm.argLine>
    </properties>
    <organization>
        <name>Centro de Investigación en Tecnoloxías da Información (CITIUS)</name>
        <url>http://citius.usc.es</url>
    </organization>
    <issueManagement>
        <system>bitbucket.org</system>
        <url>https://bitbucket.org/adrian_gonzalez/hipster</url>
    </issueManagement>
    <inceptionYear>2013</inceptionYear>
    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <prerequisites>
        <maven>3.0.3</maven>
    </prerequisites>
    <scm>
        <connection>scm:git:ssh://git@bitbucket.org:hipster/hipster.git</connection>
        <developerConnection>scm:git:ssh://git@bitbucket.org:hipster/hipster.git</developerConnection>
        <url>https://hipster@bitbucket.org/hipster/hipster.git</url>
    </scm>
    <developers>
        <developer>
            <id>pablormier</id>
            <name>Pablo Rodríguez Mier</name>
            <email>pablo.rodriguez.mier@usc.es</email>
            <organization>Centro de Investigación en Tecnoloxías da Información (CITIUS), University of Santiago de
                Compostela
            </organization>
            <organizationUrl>http://citius.usc.es</organizationUrl>
            <roles>
                <role>owner</role>
                <role>developer</role>
            </roles>
        </developer>
        <developer>
            <id>adrian_gonzalez</id>
            <name>Adrián González Sieira</name>
            <email>adrian.gonzalez@usc.es</email>
            <organization>Centro de Investigación en Tecnoloxías da Información (CITIUS), University of Santiago de
                Compostela
            </organization>
            <organizationUrl>http://citius.usc.es</organizationUrl>
            <roles>
                <role>owner</role>
                <role>developer</role>
            </roles>
        </developer>
    </developers>
    <dependencies>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>14.0.1</version>
        </dependency>

        <!-- Test dependencies -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.11</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>net.sf.jung</groupId>
            <artifactId>jung2</artifactId>
            <version>2.0.1</version>
            <type>pom</type>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>net.sf.jung</groupId>
            <artifactId>jung-graph-impl</artifactId>
            <version>2.0.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>net.sf.jung</groupId>
            <artifactId>jung-api</artifactId>
            <version>2.0.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>net.sf.jung</groupId>
            <artifactId>jung-algorithms</artifactId>
            <version>2.0.1</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.2.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                            <goal>test-jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.9</version>
                <configuration>
                    <!--<stylesheetfile>src/main/javadoc/stylesheet.css</stylesheetfile>-->
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>